# funcnodes_worker

./: CHANGELOG.md  pyproject.toml
src/funcnodes_worker/: __init__.py  _opts.py  external_worker.py  loop.py  message_queue_worker.py  remote_worker.py  socket.py  websocket.py  worker.py
src/funcnodes_worker/utils/: modules.py  subprocess.py
tests/: test_client_connection.py  test_external_worker.py  test_loops.py  test_repo_csv_cache.py  test_socketworker.py  test_worker.py  test_ws_worker.py
